# exercises

./: .gitignore  Divisor.py  Fibonacci.py  FirstLastList.py  Prime.py  euler10.py  euler11.py  euler14.py  euler15.py  euler16.py  euler17.py  euler18.py  euler2.py  euler20.py  euler3.py  euler4.py  euler5.py  euler7.py  euler9.py
C#/Demo_Single_Responsibility/Calculator/: Demo_SingleResponsibility.sln
C#/E-reader/: E-reader.sln
C#/E-reader/CA/: Book.cs  BookFormat.cs  BookReader.cs  CA.csproj  IReader.cs  ISBN.cs  ISBNStruct.cs  ImageBook.cs  ImageBookReader.cs  Program.cs  TextBook.cs  TextBookReader.cs
C#/helloworld/: helloworld.sln
C#/helloworld/helloworld/: Program.cs  helloworld.csproj
C#/prakbank/: prakbank.sln
C#/prakbank/CA/: Bankaccount.cs  CA.csproj  Starter.cs
C#/prakbasics/: prakbasics.sln
C#/prakbasics/CA1/: CA1.csproj  DateTimeProgram.cs  MathProgram.cs  Starter.cs  StringProgram.cs
C#/prakinterimbureau/: prakinterimbureau.sln
C#/prakinterimbureau/CA/: CA.csproj  Starter.cs  Task.cs
C#/praklucky/: praklucky.sln
C#/praklucky/Lucky7/: Lucky.cs  Lucky7.csproj  Program.cs
C#/prakrekenen/: prakrekenen.sln
C#/prakrekenen/CA/: BasicCalculator.cs  CA.csproj  Program.cs
C#/prakvervoer/: prakvervoer.sln
C#/prakvervoer/vervoer/: Airplane.cs  Car.cs  Program.cs  Vehicle.cs  vervoer.csproj
C/week1/: 2darray.c  CMakeLists.txt  arrays.c  asciiTabel.c  basic_syntax.c  dobbelstenen.c  geheugen_ampersand.c  hogerLager.c  kopofmunt.c  main.c  memory.c  priemgetallen.c  scanners.c  strings.c
C/week2/: CMakeLists.txt  callByRef.c  heap.c  main.c  pointer2doef.c  pointers.c  pointersArrays.c  randomPointers.c  schaakbord.c  stringCamelCase.c  stringVerwissel.c  stringVerwissel2.c  tabelShuffleMean.c  tekeningen.c  temperaturen.c  verhoogGetallen.c  verkoop.c
C/week3/: CMakeLists.txt  drivers.c  dynamischePointers.c  formule1_1.c  getallenKwadraten.c  getallenSom.c  getallenVerticaal.c  main.c  muziekCollectie.c  oefstruct.c  pointerlus.c  recursie.c  recursieFaculteit.c  recursieMachten.c  recursieMatroesjka.c  recursiePalindroom.c  recursieStringReverse.c  stringCamelCase.c  stringEncryptDecrypt.c  stringVerwissel.c  stringVerwissel2.c  structBMI.c  structDynamisch.c  structKaart1.c  structKaart2.c  structKaartDynamisch.c  structNietDynamisch.c  structures.c  temperaturen.c  verhoogGetallen.c  wisselFunctie.c
C/week4/: CMakeLists.txt  ariadneWire.c  arraylist.c  arraylistTest.c  binarySearchTree.c  compareArrays.c  hashMap.c  hashMapCollisionFree.c  hashfunction.c  linkedlist.c  main.c  mapArray.c  queueArray.c  queueLinked.c  setUnique.c  stackArray.c  stackArrayTest.c  stackLinked.c  tree.c  treeSet.c  verkoop.c
C/week5/: CMakeLists.txt  binarySearch.c  bubbleSort.c  bubbleSortOptimized.c  linearSearch.c  main.c  merge.c  mergeSort.c  quickSort.c  selectionSort.c  studentRecords.c
HTML & CSS/: mijn_demo.html
HTML & CSS/INF103B_de_Ridder_Bryan/: index.html
HTML & CSS/INF103B_de_Ridder_Bryan/css/: basicstylesheet.css  basisstijlblad.css  lineup.css  lineupstijlblad.css  lineupstylesheet.css  news.css  photogallery.css  photogallerystylesheet.css  practicalinfo.css  stijlblad.css  ticketform.css  ticketformstijlblad.css  ticketformstylesheet.css
HTML & CSS/INF103B_de_Ridder_Bryan/subpages/: buytickets.html  lineup.html  lineupinfo.html  photos.html  practicalinfo.html  ticketinfo.html  tickets.html
HTML & CSS/Week1/H1/: test.html
Java/.metadata/: version.ini
Javascript/AjaxCalls/: package-lock.json
Javascript/node_hyphen/: package.json
Javascript/restserver/: db.json
Javascript/sass/: package-lock.json
Javascript/sassHeaders/: styles.css  styles.css.map
Javascript/sassOefening/: styles.css  styles.css.map
Javascript/week1/: basisbegrippen.js  index.html
Python/: Fibonacci.py  PrimeFactors.py  euler11.py  euler12.py  euler13.py  euler15.py  euler6.py  euler8.py  main.py  sum_multiples.py  text.txt
dotnet/CourseManagementEF/: CourseManagementEF.sln
dotnet/CourseManagementWeb/: CourseManagementWeb.sln
dotnet/DelegateExample/: DelegateExample.sln
dotnet/Eg_SupportCenter-EF/: SupportCenter.sln
dotnet/Immo/: Immo.sln
dotnet/LambdaGenericAno/: LambdaGenericAno.sln
dotnet/Prak_Hotelketen_Startversie/: Hotelketen_Startversie.sln
dotnet/SupportCenter/: SupportCenter.sln
dotnet/prakrouting/: prakrouting.sln
(+1595 files in other folders)
