cmake_minimum_required(VERSION 3.6)
project(week3)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES main.c)
add_executable(week3 ${SOURCE_FILES})
add_executable(formule1_1 formule1_1.c)
add_executable(oefstruct oefstruct.c)
add_executable(recursie recursie.c)
add_executable(recursieMachten recursieMachten.c)
add_executable(recursieMatroesjka recursieMatroesjka.c)
add_executable(structBMI structBMI.c)
add_executable(structDynamisch structDynamisch.c)
add_executable(structKaart1 structKaart1.c)
add_executable(structKaart2 structKaart2.c)
add_executable(structNietDynamisch structNietDynamisch.c)
add_executable(structures structures.c)
add_executable(recursieStringReverse recursieStringReverse.c)
add_executable(recursieFaculteit recursieFaculteit.c)
add_executable(muziekCollectie muziekCollectie.c)
add_executable(recursiePalindroom recursiePalindroom.c)
add_executable(getallenVerticaal getallenVerticaal.c)
add_executable(getallenSom getallenSom.c)
add_executable(getallenKwadraten getallenKwadraten.c)
add_executable(structKaartDynamisch structKaartDynamisch.c)


